# siiau-tools

./: .gitignore  README.md  package.json
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  requests.rs
src-tauri/src/classes/: mod.rs
src/components/: Test2.svelte
src/components/Scheduler/: Buscador.svelte  Calendar.svelte  Cicler.svelte  Config.svelte  Generador.svelte  HourLister.svelte  Materia.svelte  MateriaInfo.svelte  MateriasLista.svelte  Scheduler.svelte  Test.svelte  cartesian.js  stores.ts  types.d.ts
src/components/Selector/: Cicler.svelte  Selector.svelte  types.d.ts
