[package]
name = "siiau-tools"
version = "0.1.1"
description = "SIIAU Tools, herramientas para estudiantes"
authors = ["kwattt"]
license = ""
repository = ""
default-run = "siiau-tools"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-message", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "shell-open"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "*"
cached = "*"


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
